WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278359
REGRESSION (
274396@main
): UI Process COOP check should only remove opener during main frame navigations
https://bugs.webkit.org/show_bug.cgi?id=278359
Summary
REGRESSION (274396@main): UI Process COOP check should only remove opener dur...
Alex Christensen
Reported
2024-08-19 17:00:55 PDT
rdar://132840366
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-08-19 17:04:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32433
EWS
Comment 2
2024-08-19 22:15:24 PDT
Committed
282482@main
(c208d4a122c6): <
https://commits.webkit.org/282482@main
> Reviewed commits have been landed. Closing PR #32433 and removing active labels.
EWS
Comment 3
2024-08-21 10:19:34 PDT
Committed
280938.252@safari-7619-branch
(909f964ee4b3): <
https://commits.webkit.org/280938.252@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1626 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug