REGRESSION (274396@main): UI Process COOP check should only remove opener during main frame navigations https://bugs.webkit.org/show_bug.cgi?id=278359 rdar://132840366

Reviewed by Matthew Finkel.

We have COOP header checks in the network process and web process, and in 274396@main I introduced one
in the UI process.  However, the other two checks have this comment:
// COOP only applies to top-level browsing contexts.
I missed adding that check in the UI process.  As a result, if there is an iframe loaded with a COOP header
(which should be ignored), then a cross-origin navigation, then another cross-origin navigation back,
the opener should be there but we had removed it.  The regression caused a login flow to break.

I manually verified the login flow is fixed with this change, and I added a unit test that hits this condition.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForResponseShared):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
((ProcessSwap, ClientRedirectAfterCOOPIframeIgnored)):

Canonical link: https://commits.webkit.org/282482@main